--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-    <title>PRJ4 Base Group Template &mdash; Landing Page</title>
+    <title>Fellow &mdash; Landing Page</title>
 
     <!-- Google Analytics code goes just below here (check PRJ4 Guide for details) -->
+	  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WGJHVN4Z34"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WGJHVN4Z34');
+</script>
+
 
     <!-- End of Google Analytics code -->
 
@@ -26,7 +37,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="images/buas-square.svg" width="40" alt="Breda University of Applied Sciences">
+          <img src="images/logo/circle.png" width="40" alt="Breda University of Applied Sciences">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,11 +45,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+				<h9><a class="nav-link active" aria-current="page" href="index.html"><h9>Home</h9></a>
+	
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                UX Patterns
+                <h9>UX Patterns</h9>
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="hero.html">Hero Section</a></li>
@@ -49,10 +61,10 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://buas-media-interactive.github.io/prj4-guide/" target="_blank">PRJ4 Guide</a>
+              <a class="nav-link" href="https://buas-media-interactive.github.io/prj4-guide/" target="_blank"><h9>PRJ4 Guide</h9></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="corporate.html">Corporate</a>
+              <a class="nav-link" href="corporate.html"><h9>Corporate</h9></a>
             </li>
           </ul>
         </div>
@@ -62,14 +74,10 @@
 
     <!-- Start of main placeholder in landing page -->
     <main class="h-100 d-flex flex-column justify-content-center align-items-center">
-      <img class="mb-4" src="images/buas-square.svg" width="100">
-      <h1>Your Brand</h1>
+      <img class="mb-4" src="images/logo/circle.png" width="100">
+      <h1>Fellow</h1>
       <h5 class="fst-italic mb-5">Coming soon…</h5>
       <div class="container text-center">
-        <p>This is a page you can use as a placeholder for your future website.</p>
-        <p>Once published (which should be at the end of week 5 of the project), it can be fully integrated within your marketing campaign.</p>
-        <p>You will then replace this landing page by a full website.</p>
-        <p>To build your website, pick and mix elements from the UX pattern pages of this website (check menu above).</p>
       </div>
     </main>
     <!-- End of main placeholder -->
