--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@ body {font-size:16px;}
 <nav class="w3-sidebar w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
-    
-	  <img src="images/logo.svg" style="width:100%" onclick="onClick(this)" alt="Concrete meets bricks">
+    <img src="images/logo.svg" style="width:100%" onclick="onClick(this)" alt="Concrete meets bricks">
 	  
   </div>
   <div class="w3-bar-block">
@@ -64,9 +63,9 @@ body {font-size:16px;}
 </nav>
 
 <!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
-  <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-  <span>Company Name</span>
+<header class="w3-container w3-top w3-hide-large bluefellow w3-xlarge w3-padding">
+  <a href="javascript:void(0)" class="w3-button bluefellow w3-margin-right" onclick="w3_open()">☰</a>
+  <span>Fellow</span>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -76,15 +75,11 @@ body {font-size:16px;}
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
-	<div class="background">
-  <div class="transbox" >
-	  <h3>Fellow</h3> 
+	  <h1>Fellow</h1> 
 	  <h2> The Company you Need.</h2>
-  </div>
-</div>
+ 
 	 <div class="w3-container" style="margin-top:80px" id="showcase">
-    <h1 class="w3-jumbo"><b>Fellow</b></h1>
-    <h1 class="w3-xxxlarge bluefellow"><b>Showcase.</b></h1>
+    <h2 class="w3-xxxlarge bluefellow"><b>Product.</b></h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
   </div>
   
@@ -114,7 +109,7 @@ body {font-size:16px;}
 
   <!-- Services -->
   <div class="w3-container" id="services" style="margin-top:75px">
-    <h1 class="w3-xxxlarge bluefellow"><b>Services.</b></h1>
+    <h2 class="w3-xxxlarge bluefellow"><b>About Us.</b></h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
     <p>We are a interior design service that focus on what's best for your home and what's best for you!</p>
     <p>Some text about our services - what we do and what we offer. We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
@@ -125,7 +120,7 @@ body {font-size:16px;}
   
   <!-- Designers -->
   <div class="w3-container" id="designers" style="margin-top:75px">
-    <h1 class="w3-xxxlarge bluefellow"><b>Designers.</b></h1>
+    <h2 class="w3-xxxlarge bluefellow"><b>Your Fellow Team.</b></h2>
     <hr style="width:50px;border:5px solid" class="w3-round darkbeigefellow">
     <p>The best team in the world.</p>
     <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
