--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@ body {font-size:16px;}
   <!-- Header -->
 <div class="w3-container">
 	<video width="640" height="240" autoplay>
-  <source src="facetime.mp4" type="video/mp4">
+  <source src="facetime.mp4" type="video/mp4" style="opacity:0.2">
+		 <h1>Fellow</h1> 
+		</video>
 </div>
-	  <h1>Fellow</h1> 
+	 
 	  <h2> The Company you Need.</h2>
  
 	 <div class="w3-container" style="margin-top:80px" id="showcase">
