--- a/index.html
+++ b/index.html
@@ -83,24 +83,22 @@ body {font-size:16px;}
   <div class="overlay"></div>
 
   <!-- The HTML5 video element that will create the background video on the header -->
-  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-    <source src="videos/phone.mp4" type="video/mp4">
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" width="750" >
+    <source src="videos/facetime.mp4" type="video/mp4">
   </video>
 
   <!-- The header content -->
   <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
-        <h1 class="display-3">Video Header</h1>
-        <p class="lead mb-0">Using HTML5 Video and Bootstrap</p>
+        <h1 class="display-3">Fellow</h1>
+        <h2 class="lead mb-0">The Company You Need</h2>
       </div>
     </div>
   </div>
 </header>
 </div>
 	 
-	  <h2> The Company you Need.</h2>
- 
 	 <div class="w3-container" style="margin-top:80px" id="showcase">
     <h2 class="w3-xxxlarge bluefellow"><b>Product.</b></h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
