--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {font-size:16px;}
 </nav>
 
 <!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-hide-large bluefellow w3-xlarge w3-padding">
+<header class="w3-container w3-top w3-hide-large backblue w3-xlarge w3-padding">
   <a href="javascript:void(0)" class="w3-button bluefellow w3-margin-right" onclick="w3_open()">☰</a>
   <span>Fellow</span>
 </header>
@@ -76,31 +76,28 @@ body {font-size:16px;}
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
-<div class="w3-container">
-	<header>
 
+<div class="headerfellow"></div>
   <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
-  <div class="overlay"></div>
+  <div class="overlayfellow"></div>
 
   <!-- The HTML5 video element that will create the background video on the header -->
-  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" width="750" >
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" width="750"  >
     <source src="videos/facetime.mp4" type="video/mp4">
   </video>
 
   <!-- The header content -->
-  <div class="container h-100">
-    <div class="d-flex h-100 text-center align-items-center">
+  <div class="containerfellow h-100">
+    <div class="d-flex h-100 text-center align-items-center ">
       <div class="w-100 text-white">
-        <h1 class="display-3">Fellow</h1>
-        <h2 class="lead mb-0">The Company You Need</h2>
+        <h1 >Fellow</h1>
+        <h2 > The Company You Need</h2>
       </div>
     </div>
   </div>
-</header>
-</div>
-	 
+
 	 <div class="w3-container" style="margin-top:80px" id="showcase">
-    <h2 class="w3-xxxlarge bluefellow"><b>Product.</b></h2>
+    <h2 class="w3-xxxlarge bluefellow">Product.</h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
 </div>
   
@@ -129,7 +126,7 @@ body {font-size:16px;}
   </div>
 
  <div class="w3-container" id="packages" style="margin-top:75px">
-    <h1 class="w3-xxxlarge bluefellow"><b>Packages.</b></h1>
+    <h2 class="w3-xxxlarge bluefellow"><b>Packages.</b></h2>
     <hr style="width:50px;border:5px solid" class="w3-round darkbeigefellow">
     <p>Some text our prices. Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
 </div>
@@ -235,7 +232,7 @@ body {font-size:16px;}
  
   <!-- Contact -->
   <div class="w3-container" id="contact" style="margin-top:75px">
-    <h1 class="w3-xxxlarge bluefellow"><b>Contact.</b></h1>
+    <h2 class="w3-xxxlarge bluefellow"><b>Contact.</b></h2>
     <hr style="width:50px;border:5px solid" class="w3-round darkbeigefellow">
     <p>Do you want us to style your home? Fill out the form and fill me in with the details :) We love meeting new people!</p>
     <form action="/action_page.php" target="_blank">
