--- a/index.html
+++ b/index.html
@@ -54,18 +54,19 @@ body {font-size:16px;}
 	  
   </div>
   <div class="w3-bar-block">
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Home</a> 
-    <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Showcase</a> 
-    <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Services</a> 
-    <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Designers</a> 
-    <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Packages</a> 
+    <a href="#fellow" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Home</a> 
+    <a href="#product" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Product</a> 
+    <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">About us</a> 
+    <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Your Fellow Team</a> 
+    <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Package</a> 
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Contact</a>
+	  <a href="corporate.html#corporate" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Corporate</a>
   </div>
 </nav>
 
 <!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-hide-large backblue w3-xlarge w3-padding">
-  <a href="javascript:void(0)" class="w3-button bluefellow w3-margin-right" onclick="w3_open()">☰</a>
+<header class="w3-container w3-top w3-hide-large backblue w3-xlarge w3-padding front">
+  <a href="javascript:void(0)" class="w3-button beigefellow w3-margin-right front" onclick="w3_open()">☰</a>
   <span>Fellow</span>
 </header>
 
@@ -75,15 +76,17 @@ body {font-size:16px;}
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
+
   <!-- Header -->
 
-<div class="headerfellow"></div>
+<div class="headerfellow" id="fellow"></div>
   <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
   <div class="overlayfellow"></div>
 
   <!-- The HTML5 video element that will create the background video on the header -->
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" width="750"  >
     <source src="videos/facetime.mp4" type="video/mp4">
+	  <h1 class="front"> Fellow </h1>
   </video>
 
   <!-- The header content -->
@@ -96,7 +99,7 @@ body {font-size:16px;}
     </div>
   </div>
 
-	 <div class="w3-container" style="margin-top:80px" id="showcase">
+	 <div class="w3-container" style="margin-top:80px" id="product">
     <h2 class="w3-xxxlarge bluefellow">Product.</h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
 </div>
@@ -172,7 +175,7 @@ body {font-size:16px;}
   
 	
   <!-- Services -->
-  <div class="w3-container" id="services" style="margin-top:75px">
+  <div class="w3-container" id="about" style="margin-top:75px">
     <h2 class="w3-xxxlarge bluefellow"><b>About Us.</b></h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
     <p>We are a interior design service that focus on what's best for your home and what's best for you!</p>
@@ -227,7 +230,28 @@ body {font-size:16px;}
       </div>
     </div>
   </div>
-
+  <!-- The Team -->
+  <div class="w3-row-padding">
+    <div class="w3-col m4 w3-margin-bottom">
+      <div class="w3-light-grey">
+        <img src="images/portrait/paul.jpg" alt="John" style="width:100%">
+        <div class="w3-container">
+          <h2>John Doe</h2>
+          <p class="w3-opacity">CEO Founder</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+        </div>
+      </div>
+    </div>
+    <div class="w3-col m4 w3-margin-bottom">
+      <div class="w3-light-grey">
+        <img src="images/portrait/paul.jpg" alt="Jane" style="width:100%">
+        <div class="w3-container">
+          <h2>Jane Doe</h2>
+          <p class="w3-opacity">Designer</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+        </div>
+      </div>
+    </div>
   <!-- Packages / Pricing Tables -->
  
   <!-- Contact -->
@@ -256,7 +280,25 @@ body {font-size:16px;}
 </div>
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
+<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px">
+	<div class="container d-flex justify-content-between align-items-center">
+        <p>
+          © 2022&ndash;2023 &mdash; Breda University of Applied Sciences
+        </p>
+        <ul class="list-unstyled d-flex align-items-center opacity-75">
+          <li>
+            <a href="https://www.facebook.com/bredauniversityas" target="_blank">
+              <img class="m-2" src="images/facebook.svg" alt="Follow us on" width="26">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/BredaUniversityofAppliedSciences" target="_blank">
+              <img class="m-2" src="images/youtube.svg" alt="Follow us on YouTube" width="26">
+            </a>
+          </li>
+		</ul>
+			</div>
+	</div>
 
 <script>
 // Script to open and close sidebar
@@ -278,6 +320,6 @@ function onClick(element) {
   captionText.innerHTML = element.alt;
 }
 </script>
-
+	</div>
 </body>
 </html>
