--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@ body {font-size:16px;}
 <nav class="w3-sidebar w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
-    <img src="images/logo/mainlogo.svg" style="width:100%" onclick="onClick(this)" alt="Concrete meets bricks">
-	  
+    <img src="images/logo/mainlogo.svg" style="width:100%" onclick="onClick(this)" alt="Fellow">
   </div>
   <div class="w3-bar-block">
     <a href="#fellow" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white white">Home</a> 
@@ -72,32 +71,28 @@ body {font-size:16px;}
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
+	  <!-- Header -->
+
+<div class="headerfellow" id="fellow"></div>
+<div class="w3-main" style="margin-left:340px;margin-right:40px">
+  <!-- The HTML5 video element that will create the background video on the header -->
+	<div>
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop"  >
+    <source src="videos/facetime.mp4" type="video/mp4">
+  </video>
+		
+	
+
+    </div>
+	 </div>
+		</div>
+	
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
 
-  <!-- Header -->
 
-<div class="headerfellow" id="fellow"></div>
-  <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
-  <div class="overlayfellow"></div>
-
-  <!-- The HTML5 video element that will create the background video on the header -->
-  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" width="750"  >
-    <source src="videos/facetime.mp4" type="video/mp4">
-  </video>
-	
-
-  <!-- The header content -->
-  <div class="containerfellow h-100">
-    <div class="d-flex h-100 text-center align-items-center ">
-      <div class="w-100 text-white">
-        <h1 >Fellow</h1>
-        <h2 > The Company You Need</h2>
-      </div>
-    </div>
-  </div>
-
+<hr style="height:100pt; visibility:hidden;" />
 	 <div class="w3-container" style="margin-top:80px" id="product">
     <h2 class="w3-xxxlarge bluefellow">Product.</h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
@@ -201,7 +196,7 @@ body {font-size:16px;}
       <div class="w3-light-grey">
         <img src="images/portrait/jisk.jpg" alt="John" style="width:100%">
         <div class="w3-container">
-          <h2>John Doe</h2>
+          <h2>Jiska van Hazendonk&nbsp;</h2>
           <p class="w3-opacity">CEO Founder</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
@@ -211,7 +206,7 @@ body {font-size:16px;}
       <div class="w3-light-grey">
         <img src="images/portrait/laur.jpg" alt="Jane" style="width:100%">
         <div class="w3-container">
-          <h2>Jane Doe</h2>
+          <h2>Laure van Spijk&nbsp;</h2>
           <p class="w3-opacity">Designer</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
@@ -221,9 +216,9 @@ body {font-size:16px;}
       <div class="w3-light-grey">
         <img src="images/portrait/pau.jpg" alt="Mike" style="width:100%">
         <div class="w3-container">
-          <h2>Mike Ross</h2>
-          <p class="w3-opacity">Architect</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <h2>Paul Bianchi</h2>
+          <p class="w3-opacity">Programmer</p>
+          <p>Paul Bianchi learned programming just for Fellow to give our guests a seamless and accessible experience. </p>
         </div>
       </div>
     </div>
@@ -234,7 +229,7 @@ body {font-size:16px;}
       <div class="w3-light-grey">
         <img src="images/portrait/isal.jpg" alt="John" style="width:100%">
         <div class="w3-container">
-          <h2>John Doe</h2>
+          <h2>Isalin Mulders&nbsp;</h2>
           <p class="w3-opacity">CEO Founder</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
@@ -242,10 +237,10 @@ body {font-size:16px;}
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="images/portrait/paul.jpg" alt="Jane" style="width:100%">
+        <img src="images/portrait/your.jpg" alt="Youri Poirters" style="width:100%">
         <div class="w3-container">
-          <h2>Jane Doe</h2>
-          <p class="w3-opacity">Designer</p>
+          <h2>Youri Poirters</h2>
+          <p class="w3-opacity">Management</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
       </div>
