--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@ body {font-size:16px;}
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
 </div>
   
+
+	
   <!-- Photo grid (modal) -->
   <div class="w3-row-padding">
     <div class="w3-half">
-      <img src="images/product/charge.jpg" style="width:100%" onclick="onClick(this)" alt="Fellow charging station">
-      <img src="images/product/product.jpg" style="width:100%" onclick="onClick(this)" alt="Fellow">
+      
+ 
       <img src="/w3images/diningroom.jpg" style="width:100%" onclick="onClick(this)" alt="White walls with designer chairs">
     </div>
 
@@ -123,9 +125,12 @@ body {font-size:16px;}
   </div>
 
  <div class="w3-container" id="packages" style="margin-top:75px">
-    <p>Some text our prices. Lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure</p>
+	 <img src="images/product/charge.jpg" style="width:100%" onclick="onClick(this)" alt="GoldView charging dock">
+  <div class="w3-container" id="about" style="margin-top:75px">
+    <p> Introducing <b>Goldview. </b><br> Your personal device to contact your community and family in the click of a button. Video call with new friends currated to your preferences, interests and age. With a simple and straightforward design, this at home screen with it's charging dock, removes all the complications that the golden age can find on modern phones.<br><br>    <img src="images/product/product.jpg" style="width:100%" onclick="onClick(this)" alt="GoldView"><br><br> With an easy payment of EUR15/month, Fellow support staff will install GoldView at your home and walk you through the ease of use of our product. Next to our installation services, our support team is available 24/7 on GoldView to help you out with any issues or questions that may arise. Everything for your comfort </p>
 </div>
-
+	</div>
+  <div class="w3-container" id="pay" style="margin-top:75px">
 	<div class="containerpay p-0 ">
         <div class="card px-4">
             <p class="h8 py-3">Payment Details</p>
@@ -156,7 +161,7 @@ body {font-size:16px;}
                 </div>
                 <div class="col-12">
                     <div class="btn btn-primary mb-3">
-                        <span class="ps-3">Pay $243</span>
+                        <span class="ps-3">Start Monthly Subscription EUR 15/Month</span>
                         <span class="fas fa-arrow-right"></span>
                     </div>
                 </div>
@@ -171,24 +176,43 @@ body {font-size:16px;}
   <div class="w3-container" id="about" style="margin-top:75px">
     <h2 class="w3-xxxlarge bluefellow"><b>About Us.</b></h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
-    <p>We are a interior design service that focus on what's best for your home and what's best for you!</p>
-    <p>Some text about our services - what we do and what we offer. We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <p>Fellow was founded by five Creative Business students who recognized the importance of social connections amongst seniors. The current growing online world we live in makes that the search and preservation of social connections not always come naturally anymore for elderly people. At Fellow, we are offering a helping hand for seniors in the digital environment. The platform and device we created provides an easy and accessible way for seniors to connect with others. Our mission is to bridge the gap between loneliness and community. </p>
+	 <hr style="border:5px solid " class="w3-round darkbeigefellow">
+	  <center><h3>Vision</h3></center> 
+    <p>Our vision is to create a world where seniors can maintain their social connections and reconnect with their generation in a simple way. We believe that through these connections, they can preserve their mental and emotional well-being.
     </p>
+	  <p><b>‘’In a world where seniors can feel isolated and disconnected from their loved ones and the community around them, We believe that there should be a simple way for them to maintain their social connections and reconnect with their generation, Because only then can they preserve their mental and emotional well-being.’’</b></p>
   </div>
-  
+	  <hr style="border:5px solid " class="w3-round darkbeigefellow">
+	 <center> <h3 >Values</h3></center>
+	</div>
+
+		 <div class="w3-row-padding">
+    <div class="w3-half">
+      
+ 	 <center><p><b>Connection</b></p></center>
+ 	   <p>We believe that every senior should have access to meaningful connections. Our brand values the importance of human relationships and strives to provide an environment that fosters and maintains social connections.</p>
+	 <center><p><b>Simplicity</b></p></center> <p> We aim to make technology easy and accessible for seniors. Our brand values simplicity in all aspects of our product from the design to the user interface, to ensure that every user can easily connect with others.</p>
+    </div>
+
+    <div class="w3-half">
+   	<center><p><b>Community</b></p></center> <p>  We understand that community is crucial for a fulfilling life. Our brand values the importance of creating a sense of belonging and inclusivity for all seniors who use our product.
+</p>
+		<center><p><b>Guidance</b></p></center> <p>We are committed to providing guidance and support to our users. Our brand values the importance of offering a helping hand to ensure that every user has a positive experience while using our product.</p>
+    </div>
+  </div>
+		
+
   <!-- Designers -->
   <div class="w3-container" id="designers" style="margin-top:75px">
     <h2 class="w3-xxxlarge bluefellow"><b>Your Fellow Team.</b></h2>
     <hr style="width:50px;border:5px solid" class="w3-round darkbeigefellow">
     <p>The best team in the world.</p>
-    <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-    incididunt ut labore et quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <p>Fellow started off as a small university project. Followed with enough passion, hard work and a wish to help out our elderly, we were able to produce GoldView, finally achieving a dream of respect towards the golden age. Five colleagues now turned friends have made this possible through teamwork and communication.
     </p>
-    <p><b>Our designers are thoughtfully chosen</b>:</p>
+    <p><b>Your Fellow Team was thoughtfully chosen</b>:</p>
   </div>
+	
 
   <!-- The Team -->
   <div class="w3-row-padding">
