final before deadline

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body {font-size:16px;}
 
     </div>
 	 </div>
-		</div>
+		
 	
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
@@ -112,17 +112,19 @@ body {font-size:16px;}
     </div>
 
     <div class="w3-half">
-		    <h2 class="beigefellow" align="center" style="font-size: 100px"> Goldview </h2>
+		    <h2 class="beigefellow" align="center" style="font-size: 100px"> GoldView </h2>
 		<br>
-		<p align="justify">  Your personal device to contact your community and family in the click of a button. Video call with new friends currated to your preferences, interests and age. With a simple and straightforward design, this at home screen with it's charging dock, removes all the complications that the golden age can find on modern phones.</p> 
+		<p align="justify">  GoldView is your personal device to contact your community and family in the click of a button. Video call with new friends currated to your preferences, interests and age. With a simple and straightforward design, this at home screen with it's charging dock, removes all the complications that the golden age can find on modern phones.</p> 
 		<br>
 		<br>
       <img src="images/product/product.jpg" style="width:100%" onclick="onClick(this)" alt="GoldView">
-	  </div>
-  <div class="w3-container" id="pay" style="margin-top:75px">
+    </div>
+	  
+  <div class="w3-container" id="pay" style="margin-top:75px"><br>
+	  <br>
 	<div class="containerpay p-0 ">
         <div class="card px-4">
-            <p class="h8 py-3">Payment Details</p>
+            <p class="h8 py-3">Get Goldview right away for only EUR15/month</p>
             <div class="row gx-3">
                 <div class="col-12">
                     <div class="d-flex flex-column">
@@ -166,13 +168,13 @@ body {font-size:16px;}
     <h2 class="w3-xxxlarge bluefellow"><b>About Us</b></h2>
     <hr style="width:50px;border:5px solid " class="w3-round darkbeigefellow">
     <p>Fellow was founded by five Creative Business students who recognized the importance of social connections amongst seniors. The current growing online world we live in makes that the search and preservation of social connections not always come naturally anymore for elderly people. At Fellow, we are offering a helping hand for seniors in the digital environment. The platform and device we created provides an easy and accessible way for seniors to connect with others. Our mission is to bridge the gap between loneliness and community. </p>
-	 <hr style="border:5px solid " class="w3-round darkbeigefellow">
+	 <hr style="border:5px solid " id="vision" class="w3-round darkbeigefellow" >
 	  <center><h3>Vision</h3></center> 
     <p>Our vision is to create a world where seniors can maintain their social connections and reconnect with their generation in a simple way. We believe that through these connections, they can preserve their mental and emotional well-being.
     </p>
 	  <p><b>‘’In a world where seniors can feel isolated and disconnected from their loved ones and the community around them, We believe that there should be a simple way for them to maintain their social connections and reconnect with their generation, Because only then can they preserve their mental and emotional well-being.’’</b></p>
   </div>
-	  <hr style="border:5px solid " class="w3-round darkbeigefellow">
+	  <hr style="border:5px solid " id="values" class="w3-round darkbeigefellow" >
 	 <center> <h3 >Values</h3></center>
 	</div>
 
