--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ body {font-size:16px;}
         <img src="images/portrait/laur.jpg" alt="Jane" style="width:100%">
         <div class="w3-container">
           <h2>Laure van Spijk&nbsp;</h2>
-          <p class="w3-opacity">Designer</p>
+          <p class="w3-opacity">Marketing&nbsp;</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
       </div>
@@ -234,6 +234,7 @@ body {font-size:16px;}
           <h2>Paul Bianchi</h2>
           <p class="w3-opacity">Programmer</p>
           <p>Paul Bianchi learned programming just for Fellow to give our guests a seamless and accessible experience. </p>
+          <p>His wish to help others through easy and straightforward technology has pushed him to think outside of the box for Fellow.&nbsp; &nbsp;&nbsp;</p>
         </div>
       </div>
     </div>
@@ -245,7 +246,7 @@ body {font-size:16px;}
         <img src="images/portrait/isal.jpg" alt="John" style="width:100%">
         <div class="w3-container">
           <h2>Isalin Mulders&nbsp;</h2>
-          <p class="w3-opacity">CEO Founder</p>
+          <p class="w3-opacity">Content&nbsp;</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
       </div>
