--- a/index.html
+++ b/index.html
@@ -233,8 +233,7 @@ body {font-size:16px;}
         <div class="w3-container">
           <h2>Paul Bianchi</h2>
           <p class="w3-opacity">Programmer</p>
-          <p>Paul Bianchi learned programming just for Fellow to give our guests a seamless and accessible experience. </p>
-          <p>His wish to help others through easy and straightforward technology has pushed him to think outside of the box for Fellow.&nbsp; &nbsp;&nbsp;</p>
+          <p>Paul Bianchi learned programming just for Fellow to give our guests a seamless and accessible experience.His wish to help others through easy and straightforward technology has pushed him to think outside of the box for Fellow.</p>
         </div>
       </div>
     </div>
@@ -247,7 +246,7 @@ body {font-size:16px;}
         <div class="w3-container">
           <h2>Isalin Mulders&nbsp;</h2>
           <p class="w3-opacity">Content&nbsp;</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>As head of content, Isalin hopes to contribute to a friendlier world by spreading Fellow's message. Being there for others is what drives her everyday.</p>
         </div>
       </div>
     </div>
@@ -257,7 +256,7 @@ body {font-size:16px;}
         <div class="w3-container">
           <h2>Youri Poirters</h2>
           <p class="w3-opacity">Management</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>Youri plays a crucial role in this business by managing its operations and ensuring efficient task coordination.  Recognizing the importance of friendship, Youri believes that everyone craves companionship and enjoys engaging in friendly conversations.</p>
         </div>
       </div>
     </div>
