--- a/index.html
+++ b/index.html
@@ -77,10 +77,16 @@ body {font-size:16px;}
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
   <!-- The HTML5 video element that will create the background video on the header -->
 	<div>
-  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop"  >
-    <source src="videos/facetime.mp4" type="video/mp4">
-  </video>
+   <video autoplay>
+  <source src="videos/facetime.mp4" type="video/mp4">
+</video> 
 		
+ <headervideo >
+    <videovideo  autoplay loop>
+      <source src="videos/facetime.mp4" type="video/mp4">
+      <!-- Provide alternative video formats here for compatibility -->
+    </videovideo>
+  </headervideo>
 	
 
     </div>
@@ -233,7 +239,7 @@ body {font-size:16px;}
         <div class="w3-container">
           <h2>Paul Bianchi</h2>
           <p class="w3-opacity">Programmer</p>
-          <p>Paul Bianchi learned programming just for Fellow to give our guests a seamless and accessible experience.His wish to help others through easy and straightforward technology has pushed him to think outside of the box for Fellow.</p>
+          <p>Paul Bianchi learned programming just for Fellow to give our guests a seamless and accessible experience. His wish to help others through easy and straightforward technology has pushed him to think outside of the box for Fellow.</p>
         </div>
       </div>
     </div>
