--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@ body {font-size:16px;}
   <source src="videos/facetime.mp4" type="video/mp4">
 </video> 
 		
- <headervideo >
-    <videovideo  autoplay loop>
+ <header class="headervideo" >
+    <video class="videovideo"  autoplay loop>
       <source src="videos/facetime.mp4" type="video/mp4">
       <!-- Provide alternative video formats here for compatibility -->
-    </videovideo>
-  </headervideo>
+    </video>
+  </header>
 	
 
     </div>
